--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-10  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2005-07-10  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
