--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-global-preferences.[ch]:
+	* src/nautilus-actions.h:
+	* src/nautilus-navigation-window-menus.c:
+	* src/nautilus-navigation-window-ui.xml:
+	* src/nautilus-navigation-window.c:
+	Add toggle to hide/show main toolbar.
+
 2005-07-10  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-property-browser.c: (add_color_to_browser): Don't allow
