don't activate selection on expand in single click mode (#309389)
2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	don't activate selection on expand in single click mode (#309389)

	Patch from chris@gnome-de.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c:
+	don't activate selection on expand in single click mode (#309389)
+	
+	Patch from chris@gnome-de.org
+	
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-places-sidebar.c:
 	Remove gtk_range_get_adjustment assertion warnings.
 
