Handle volumes_visible changing from true to true.
2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-desktop-link-monitor.c:
	Handle volumes_visible changing from true to true.

	Patch from Benjamin Berg <benjamin@sipsolutions.net>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-desktop-link-monitor.c:
+	Handle volumes_visible changing from true to true.
+
+	Patch from Benjamin Berg <benjamin@sipsolutions.net>
+
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-view.c:
 	don't activate selection on expand in single click mode (#309389)
 	
