Fix up some strings for the translators. (#309879) Patch from Christian
2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.c:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/fm-properties-window.c:
	* src/nautilus-emblem-sidebar.c:
	Fix up some strings for the translators. (#309879)
	Patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-dnd.c:
+	* src/file-manager/fm-directory-view.c:
+	* src/file-manager/fm-properties-window.c:
+	* src/nautilus-emblem-sidebar.c:
+	Fix up some strings for the translators. (#309879)
+	Patch from Christian Neumair <chris@gnome-de.org>
+
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-desktop-link-monitor.c:
 	Handle volumes_visible changing from true to true.
 
