--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	* nautilus.desktop.in:
+	* src/file-manager/fm-tree-view.c:
+	* src/nautilus-places-sidebar.c:
+	filesystem -> file system in strings
+
+	Sebastien Bacher <seb128@debian.org>
+
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-dnd.c:
 	* src/file-manager/fm-directory-view.c:
 	* src/file-manager/fm-properties-window.c:
