Show busy cursor in browser mode too. (#97887)
2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-spatial-window.[ch]:
	* src/nautilus-window-private.h:
	* src/nautilus-window.c:
	Show busy cursor in browser mode too. (#97887)

	Patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-spatial-window.[ch]:
+	* src/nautilus-window-private.h:
+	* src/nautilus-window.c:
+	Show busy cursor in browser mode too. (#97887)
+
+	Patch from Christian Neumair <chris@gnome-de.org>
+	
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
 	* nautilus.desktop.in:
 	* src/file-manager/fm-tree-view.c:
