list width/height separately (#159851)
2005-07-11  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-image-properties-page.c: (load_finished):
	list width/height separately (#159851)

	Patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-image-properties-page.c: (load_finished):
+	list width/height separately (#159851)
+
+	Patch from Christian Neumair <chris@gnome-de.org>
+	
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-spatial-window.[ch]:
 	* src/nautilus-window-private.h:
 	* src/nautilus-window.c:
