Updated Thai translation.
2005-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

--- a/po/th.po
+++ b/po/th.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: th\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-10 19:52+0700\n"
-"PO-Revision-Date: 2005-07-10 23:12+0700\n"
+"PO-Revision-Date: 2005-07-11 17:46+0700\n"
 "Last-Translator: Supranee Thirawatthanasuk <supranee@opentle.org>\n"
 "Language-Team: Thai <L10N@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #: data/browser.xml.h:1
 msgid "Apparition"
-msgstr ""
+msgstr "ขี้เถ้า"
 
 #: data/browser.xml.h:2
 msgid "Art"
@@ -28,7 +28,7 @@ msgstr "ศิลป์"
 
 #: data/browser.xml.h:3
 msgid "Azul"
-msgstr ""
+msgstr "น้ำเงินแจ๊ด"
 
 #: data/browser.xml.h:4
 msgid "Black"
@@ -52,7 +52,7 @@ msgstr "โลหะขูด"
 
 #: data/browser.xml.h:9
 msgid "Bubble Gum"
-msgstr ""
+msgstr "ม่วงแดง"
 
 #: data/browser.xml.h:10
 msgid "Burlap"
@@ -84,7 +84,7 @@ msgstr "ถ่าน"
 
 #: data/browser.xml.h:17
 msgid "Concrete"
-msgstr "ปูน"
+msgstr "คอนกรีต"
 
 #: data/browser.xml.h:18
 msgid "Cool"
@@ -105,11 +105,11 @@ msgstr "อันตราย"
 
 #: data/browser.xml.h:22
 msgid "Danube"
-msgstr ""
+msgstr "น้ำเงินทึมนวล"
 
 #: data/browser.xml.h:23
 msgid "Dark Cork"
-msgstr ""
+msgstr "ไม้ก๊อกคล้ำ"
 
 #: data/browser.xml.h:24
 msgid "Dark GNOME"
@@ -117,7 +117,7 @@ msgstr "GNOME ทึบ"
 
 #: data/browser.xml.h:25
 msgid "Deep Teal"
-msgstr ""
+msgstr "เขียวนกเป็ดน้ำเข้ม"
 
 #: data/browser.xml.h:26
 msgid "Distinguished"
@@ -149,7 +149,7 @@ msgstr "ลากตราไปติดที่แฟ้มหรือโฟ
 
 #: data/browser.xml.h:33
 msgid "Eclipse"
-msgstr ""
+msgstr "อุปราคา"
 
 #: data/browser.xml.h:34
 msgid "Envy"
@@ -190,13 +190,13 @@ msgstr "GNOME"
 
 #: data/browser.xml.h:43
 msgid "Granite"
-msgstr "หินอัคนี"
+msgstr "แกรนิต"
 
 # Can't remember if ส้มโอ is really this color.
 # Grapefruit and ส้มโอ look very different from the outside though.
 #: data/browser.xml.h:44
 msgid "Grapefruit"
-msgstr ""
+msgstr "น้อยหน่า"
 
 #: data/browser.xml.h:45
 msgid "Green Weave"
@@ -216,12 +216,12 @@ msgstr "คราม"
 
 #: data/browser.xml.h:49
 msgid "Leaf"
-msgstr "ใบอ่อน"
+msgstr "เขียวตองอ่อน"
 
 # It's lemon color.  มะนาว will make Thai people think of lime.
 #: data/browser.xml.h:50
 msgid "Lemon"
-msgstr ""
+msgstr "เลมอน"
 
 #: data/browser.xml.h:51
 msgid "Mail"
@@ -314,7 +314,7 @@ msgstr "ฟองคลื่นทะเล"
 
 #: data/browser.xml.h:73
 msgid "Shale"
-msgstr "หินดินเหนียว"
+msgstr "หินเชล"
 
 #: data/browser.xml.h:74
 msgid "Silver"
@@ -802,7 +802,7 @@ msgid ""
 msgstr ""
 "ข้อกำหนดเพื่อความเร็วเมื่อแสดงตัวอย่างแฟ้มเสียงจากการคลิกเมาส์บนไอคอนแฟ้ม "
 "ถ้ากำหนดเป็น \"always\" ก็จะเล่นเสียงเสมอ แม้แฟ้มจะอยู่บนเซิร์ฟเวอร์ระยะไกล "
-"ถ้ากำหนดเป็น \"local_only\" ก็จะเล่นเฉพาะแฟ้มที่อยู่ในระบบแฟ้มของเครื่องปัจจุบัน "
+"ถ้ากำหนดเป็น \"local_only\" ก็จะเล่นเฉพาะแฟ้มที่อยู่ในระบบแฟ้มของเครื่องท้องถิ่น "
 "ถ้ากำหนดเป็น \"never\" ก็จะไม่แสดงตัวอย่างเสียงเลย"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:81
@@ -816,7 +816,7 @@ msgstr ""
 "ข้อกำหนดเพื่อความเร็ว เรื่องการแสดงตัวอย่างแฟ้มข้อความในไอคอนแฟ้ม "
 "ถ้ากำหนดเป็น \"always\" ก็จะแสดงตัวอย่างเสมอ "
 "แม้โฟลเดอร์จะอยู่บนเครื่องเซิร์ฟเวอร์ระยะไกล ถ้ากำหนดเป็น \"local_only\" "
-"ก็จะแสดงตัวอย่างสำหรับระบบแฟ้มในเครื่องปัจจุบันเท่านั้น ถ้ากำหนดเป็น \"never\" "
+"ก็จะแสดงตัวอย่างสำหรับระบบแฟ้มในเครื่องท้องถิ่นเท่านั้น ถ้ากำหนดเป็น \"never\" "
 "ก็จะไม่พยายามอ่านข้อมูลเพื่อแสดงตัวอย่างเลย"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:82
@@ -829,7 +829,7 @@ msgid ""
 msgstr ""
 "ข้อกำหนดเพื่อความเร็ว เรื่องการแสดงแฟ้มรูปภาพเป็นรูปย่อ ถ้ากำหนดเป็น "
 "\"always\" ก็จะแสดงรูปย่อเสมอ แม้โฟลเดอร์จะอยู่บนเซิร์ฟเวอร์ระยะไกล "
-"ถ้ากำหนดเป็น \"local_only\" ก็จะแสดงรูปย่อสำหรับระบบแฟ้มในเครื่องปัจจุบันเท่านั้น "
+"ถ้ากำหนดเป็น \"local_only\" ก็จะแสดงรูปย่อสำหรับระบบแฟ้มในเครื่องท้องถิ่นเท่านั้น "
 "ถ้ากำหนดเป็น \"never\" ก็จะไม่พยายามแสดงรูปย่อเลย และจะใช้ไอคอนรูปทั่วไปเท่านั้น"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:83
@@ -842,7 +842,7 @@ msgstr ""
 "ข้อกำหนดเพื่อความเร็ว เรื่องการแสดงจำนวนรายการในโฟลเดอร์ "
 "ถ้ากำหนดเป็น \"always\" ก็จะแสดงจำนวนรายการเสมอ "
 "แม้โฟลเดอร์จะอยู่บนเซิร์ฟเวอร์ระยะไกล ถ้ากำหนดเป็น \"local_only\" "
-"ก็จะแสดงจำนวนรายการสำหรับระบบแฟ้มในเครื่องปัจจุบันเท่านั้น ถ้ากำหนดเป็น "
+"ก็จะแสดงจำนวนรายการสำหรับระบบแฟ้มในเครื่องท้องถิ่นเท่านั้น ถ้ากำหนดเป็น "
 "\"never\" ก็จะไม่พยายามนับจำนวนรายการเลย"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:84
@@ -2344,11 +2344,11 @@ msgstr "สี่เหลี่ยมเลือก"
 
 #: libnautilus-private/nautilus-icon-container.c:4316
 msgid "Normal Alpha"
-msgstr ""
+msgstr "อัลฟาปกติ"
 
 #: libnautilus-private/nautilus-icon-container.c:4317
 msgid "Opacity of the normal icons if frame_text is set"
-msgstr ""
+msgstr "ความทึบแสงของไอคอนปกติ ถ้ามีการกำหนดค่า frame_text ไว้"
 
 #: libnautilus-private/nautilus-icon-dnd.c:771
 msgid ""
@@ -3016,6 +3016,23 @@ msgid ""
 "\n"
 "NAUTILUS_SCRIPT_WINDOW_GEOMETRY: position and size of current window"
 msgstr ""
+"ทุกแฟ้มในโฟลเดอร์นี้ ที่เรียกใช้เป็นโปรแกรมได้ จะถูกแสดงไว้ในเมนูสคริปต์ "
+"โดยสคริปต์จะทำงานเมื่อถูกเลือก\n"
+"\n"
+"ถ้าเป็นการเรียกจากโฟลเดอร์ในเครื่องท้องถิ่น สคริปต์จะได้รับชื่อแฟ้มที่เลือกเป็นอาร์กิวเมนต์ "
+"ถ้าเป็นการเรียกจากโฟลเดอร์ในเครื่องอื่น (เช่น โฟลเดอร์ที่เป็นเว็บหรือ FTP) "
+"ก็จะไม่ส่งอาร์กิวเมนต์อะไรให้เลย\n"
+"\n"
+"ไม่ว่ากรณีใดก็ตาม Nautilus จะกำหนดตัวแปรสภาพแวดล้อมต่อไปนี้ เพื่อให้สคริปต์ใช้ได้:\n"
+"\n"
+"NAUTILUS_SCRIPT_SELECTED_FILE_PATHS: รายชื่อพาธของแฟ้มที่เลือก คั่นด้วย newline "
+"(เฉพาะจากเครื่องท้องถิ่นเท่านั้น)\n"
+"\n"
+"NAUTILUS_SCRIPT_SELECTED_URIS: รายชื่อ URI ของแฟ้มที่เลือก คั่นด้วย newline\n"
+"\n"
+"NAUTILUS_SCRIPT_CURRENT_URI: URI ของตำแหน่งปัจจุบัน\n"
+"\n"
+"NAUTILUS_SCRIPT_WINDOW_GEOMETRY: ตำแหน่งและขนาดของหน้าต่างปัจจุบัน"
 
 #: src/file-manager/fm-directory-view.c:5451
 #: src/file-manager/fm-tree-view.c:900
@@ -4901,11 +4918,13 @@ msgstr "ซอฟต์แวร์"
 msgid ""
 "<b>Image Type:</b> %s (%s)\n"
 "<b>Resolution:</b> %dx%d pixels\n"
+msgid_plural ""
 "<b>Image Type:</b> %s (%s)\n"
 "<b>Resolution:</b> %dx%d pixels\n"
-msgstr ""
+msgstr[0] ""
 "<b>ชนิดรูป:</b> %s (%s)\n"
 "<b>ความละเอียด:</b> %dx%d พิกเซล\n"
+msgstr[1] ""
 "<b>ชนิดรูป:</b> %s (%s)\n"
 "<b>ความละเอียด:</b> %dx%d พิกเซล\n"
 
