--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Require eel 2.11.4
+
+	* NEWS: 
+	Update for release
+	
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-image-properties-page.c: (load_finished):
 	list width/height separately (#159851)
 
