--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.11.4 are:
+* Allow dnd of text on view to create a new file
+* show hostname in progress dialogs
+* use pathbar in location toolbar
+* busy curson when loading folder in browser mode too
+
 Major changes in 2.11.3 are:
 * Turn the list view into a tree
 * No dnd drop rect on the desktop
