--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.11.4 ===
+
+2005-07-11  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Require eel 2.11.4
 
 	* NEWS: 
