--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,8 @@
 
 	* th.po: Updated Thai translation.
 
+=== nautilus 2.11.4 ===
+
 2005-07-10  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
