Set dnd icon in drag_begin (#307943) patch from Matthias Clasen
2005-07-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.c:
	Set dnd icon in drag_begin (#307943)
	patch from Matthias Clasen

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-13  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-dnd.c:
+	Set dnd icon in drag_begin (#307943)
+	patch from Matthias Clasen
+
 2005-07-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
