Files with name "~" are not backups. (#170607) Patch from Christian
2005-07-13  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-utilities.c:
	Files with name "~" are not backups. (#170607)
	Patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-07-13  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file-utilities.c:
+	Files with name "~" are not backups. (#170607)
+	Patch from Christian Neumair <chris@gnome-de.org>
+
+2005-07-13  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-dnd.c:
 	Set dnd icon in drag_begin (#307943)
 	patch from Matthias Clasen
