--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-07-13  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-navigation-window.c:
+	* src/nautilus-spatial-window.c:
+	* src/nautilus-window.c:
+	Pack main table with GTK_SHRINK (#16057)
+
+2005-07-13  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file):
 	Don't scroll to end of column on rename (#309964).
 
