Updated Slovak translation.
2005-07-13  Marcel Telka  <marcel@telka.sk>

	* sk.po: Updated Slovak translation.

--- a/po/sk.po
+++ b/po/sk.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-07-12 20:08+0200\n"
-"PO-Revision-Date: 2005-07-12 21:39+0200\n"
+"POT-Creation-Date: 2005-07-13 19:45+0200\n"
+"PO-Revision-Date: 2005-07-13 19:45+0200\n"
 "Last-Translator: Marcel Telka <marcel@telka.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -641,7 +641,8 @@ msgid ""
 "behavior."
 msgstr ""
 "Ak je nastavené na true, všetky okná Nautilus budú oknami prehliadača. Takto "
-"bol Nautilus používaný pred verziou 2.6 a niektorí ľudia preferujú takéto správanie."
+"bol Nautilus používaný pred verziou 2.6 a niektorí ľudia preferujú takéto "
+"správanie."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:47
 msgid ""
@@ -666,7 +667,9 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
-msgstr "Ak je toto nastavené na true, na plochu sa umiestni ikona s umiestnením počítača."
+msgstr ""
+"Ak je toto nastavené na true, na plochu sa umiestni ikona s umiestnením "
+"počítača."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
@@ -686,7 +689,9 @@ msgstr "Ak je toto nastavené na true, na plochu sa umiestni ikona pre kôš."
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
-msgstr "Ak je toto nastavené na true, na plochu sa umiestnia ikony s odkazmi na pripojené zväzky."
+msgstr ""
+"Ak je toto nastavené na true, na plochu sa umiestnia ikony s odkazmi na "
+"pripojené zväzky."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:53
 msgid ""
@@ -710,9 +715,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid "If true, icons will be laid out tighter by default in new windows."
-msgstr ""
-"Ak je true, ikony budú v nových oknách viac zhustené k "
-"sebe."
+msgstr "Ak je true, ikony budú v nových oknách viac zhustené k sebe."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:56
 msgid ""
@@ -722,8 +725,7 @@ msgstr "Ak je true, popisky budú vedľa ikon a nie pod nimi."
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
 msgid "If true, new windows will use manual layout by default."
 msgstr ""
-"Ak je true, nové okná budú štandardne používať ručné "
-"nastavenie veľkosti."
+"Ak je true, nové okná budú štandardne používať ručné nastavenie veľkosti."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid ""
@@ -819,19 +821,18 @@ msgid "Side pane view"
 msgstr "Bočný panel"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:80
-#, fuzzy
 msgid ""
 "Speed tradeoff for when to preview a sound file when mousing over a files "
 "icon. If set to \"always\" then always plays the sound, even if the file is "
 "on a remote server. If set to \"local_only\" then only plays previews on "
 "local file systems. If set to \"never\" then it never previews sound."
 msgstr ""
-"Kompromis pri náhľade zvukových súborov pod kurzorom myši. Ak je nastavené "
-"na \"always\", zvuk sa vždy prehrá, aj keď je na vzdialenom serveri. Ak je "
-"\"local_only\" prehrajú sa iba lokálne zvuky. \"never\" vypne náhľady zvukov."
+"Kompromis rýchlosti pri náhľade zvukových súborov pod kurzorom myši. Ak je "
+"nastavené na \"always\", zvuk sa vždy prehrá, aj keď je na vzdialenom "
+"serveri. Ak je nastavené na \"local_only\" prehrajú sa iba lokálne zvuky. "
+"\"never\" vypne náhľady zvukov."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:81
-#, fuzzy
 msgid ""
 "Speed tradeoff for when to show a preview of text file contents in the "
 "file's icon. If set to \"always\" then always show previews, even if the "
@@ -839,12 +840,12 @@ msgid ""
 "previews for local file systems. If set to \"never\" then never bother to "
 "read preview data."
 msgstr ""
-"Kompromis pri náhľade textových súborov v ikone. Ak je nastavené na \"always"
-"\", náhľad sa zobrazí vždy, aj keď je súbor na vzdialenom serveri. Ak je "
-"\"local_only\" zobrazia sa lokálne súbory. \"never\" vypne náhľady."
+"Kompromis rýchlosti pri náhľade textových súborov v ikone. Ak je nastavené "
+"na \"always\", náhľad sa zobrazí vždy, aj keď je priečinok na vzdialenom "
+"serveri. Ak je nastavené na \"local_only\" zobrazia sa iba lokálne súbory. "
+"\"never\" vypne náhľady."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:82
-#, fuzzy
 msgid ""
 "Speed tradeoff for when to show an image file as a thumbnail. If set to "
 "\"always\" then always thumbnail, even if the folder is on a remote server. "
@@ -852,22 +853,22 @@ msgid ""
 "If set to \"never\" then never bother to thumbnail images, just use a "
 "generic icon."
 msgstr ""
-"Kompromis pri náhľade obrázkov v ikone. Ak je nastavené na \"always\", "
-"náhľad sa zobrazí vždy, aj keď je súbor na vzdialenom serveri. Ak je "
-"\"local_only\" zobrazia sa lokálne súbory. \"never\" vypne náhľady."
+"Kompromis rýchlosti pri náhľade obrázkov v ikone. Ak je nastavené na \"always"
+"\", náhľad sa zobrazí vždy, aj keď je priečinok na vzdialenom serveri. Ak je "
+"nastavené na \"local_only\" zobrazia sa iba lokálne súbory. Ak je nastavené "
+"na \"never\", náhľady sa nebudú vytvárať a použije sa všeobecná ikona."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:83
-#, fuzzy
 msgid ""
 "Speed tradeoff for when to show the number of items in a folder. If set to "
 "\"always\" then always show item counts, even if the folder is on a remote "
 "server. If set to \"local_only\" then only show counts for local file "
 "systems. If set to \"never\" then never bother to compute item counts."
 msgstr ""
-"Kompromis pri zobrazení počtu súborov v priečinku. Ak je nastavené na "
-"\"always\", položky sa vždy spočítajú, aj keď je priečinok na vzdialenom "
-"serveri. Ak je \"local_only\" počet sa zobrazí iba pre lokálne priečinky. "
-"\"never\" vypne zobrazovanie počtu položiek."
+"Kompromis rýchlosti pri zobrazení počtu súborov v priečinku. Ak je nastavené "
+"na \"always\", položky sa vždy spočítajú, aj keď je priečinok na vzdialenom "
+"serveri. Ak je nastavené na \"local_only\", počet sa zobrazí iba pre lokálne "
+"priečinky. \"never\" vypne počítanie počtu položiek."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:84
 msgid ""
@@ -898,8 +899,7 @@ msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
 msgstr ""
-"Formát dátumu súborov. Možné hodnoty sú \"locale"
-"\", \"iso\" a \"informal\"."
+"Formát dátumu súborov. Možné hodnoty sú \"locale\", \"iso\" a \"informal\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "The side pane view to show in newly opened windows."
@@ -909,7 +909,9 @@ msgstr "Bočný panel zobrazovaný v nových oknách."
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
-msgstr "Tento názov môže byť nastavený, ak chcete vlastný názov ikony počítača na pracovnej ploche."
+msgstr ""
+"Tento názov môže byť nastavený, ak chcete vlastný názov ikony počítača na "
+"pracovnej ploche."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid ""
@@ -1156,19 +1158,19 @@ msgstr "Nemôžete presunúť zväzok \"%s\" do koša."
 
 #: ../libnautilus-private/nautilus-desktop-link-monitor.c:124
 msgid ""
-"If you want to eject the volume, please use Eject in the right-click menu of "
+"If you want to eject the volume, please use \"Eject\" in the popup menu of "
 "the volume."
 msgstr ""
-"Ak chcete vysunúť zväzok, prosím použite Vysunúť z menu zväzku, ktoré je dostupné "
-"po kliknutí pravým tlačidlom myši."
+"Ak chcete vysunúť zväzok, použite prosím \"Vysunúť\" z menu zväzku, ktoré je "
+"dostupné po kliknutí pravým tlačidlom myši."
 
 #: ../libnautilus-private/nautilus-desktop-link-monitor.c:133
 msgid ""
-"If you want to unmount the volume, please use Unmount Volume in the right-"
-"click menu of the volume."
+"If you want to unmount the volume, please use \"Unmount Volume\" in the "
+"popup menu of the volume."
 msgstr ""
-"Ak chcete odpojiť zväzok, prosím použite Odpojiť zväzok z menu zväzku, ktoré "
-"je dostupné po kliknutí pravým tlačidlom myši."
+"Ak chcete odpojiť zväzok, použite prosím \"Odpojiť zväzok\" z menu zväzku, "
+"ktoré je dostupné po kliknutí pravým tlačidlom myši."
 
 #: ../libnautilus-private/nautilus-dnd.c:637
 msgid "_Move here"
@@ -1347,8 +1349,7 @@ msgstr "Chyba pri kopírovaní."
 #: ../libnautilus-private/nautilus-file-operations.c:666
 #, c-format
 msgid "\"%s\" cannot be copied because you do not have permissions to read it."
-msgstr ""
-"Nie je možné skopírovať \"%s\", pretože nemáte právo ho čítať."
+msgstr "Nie je možné skopírovať \"%s\", pretože nemáte právo ho čítať."
 
 #: ../libnautilus-private/nautilus-file-operations.c:686
 #: ../libnautilus-private/nautilus-file-operations.c:707
@@ -1485,9 +1486,9 @@ msgid ""
 "The name is already used for a special item that cannot be removed or "
 "replaced.  If you still want to move the item, rename it and try again."
 msgstr ""
-"Názov je už použitý pre špeciálnu položku, ktorá nemôže byť odstránená, "
-"ani nahradená. Ak chcete položku aj napriek tomu odstrániť, premenujte ju "
-"a skúste znova."
+"Názov je už použitý pre špeciálnu položku, ktorá nemôže byť odstránená, ani "
+"nahradená. Ak chcete položku aj napriek tomu odstrániť, premenujte ju a "
+"skúste znova."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1075
 #, c-format
@@ -1499,9 +1500,9 @@ msgid ""
 "The name is already used for a special item that cannot be removed or "
 "replaced.  If you still want to copy the item, rename it and try again."
 msgstr ""
-"Názov je už použitý pre špeciálnu položku, ktorá nemôže byť odstránená, "
-"ani nahradená. Ak chcete položku aj napriek tomu skopírovať, premenujte ju "
-"a skúste znova."
+"Názov je už použitý pre špeciálnu položku, ktorá nemôže byť odstránená, ani "
+"nahradená. Ak chcete položku aj napriek tomu skopírovať, premenujte ju a "
+"skúste znova."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1084
 msgid "Unable to Replace File"
@@ -1923,34 +1924,34 @@ msgstr ""
 msgid "_Empty Trash"
 msgstr "_Vyprázdniť kôš"
 
-#: ../libnautilus-private/nautilus-file-utilities.c:479
+#: ../libnautilus-private/nautilus-file-utilities.c:480
 #: ../libnautilus-private/nautilus-global-preferences.c:542
 #: ../nautilus-computer.desktop.in.h:1
 msgid "Computer"
 msgstr "Počítač"
 
-#: ../libnautilus-private/nautilus-file-utilities.c:481
+#: ../libnautilus-private/nautilus-file-utilities.c:482
 msgid "Network"
 msgstr "Sieť"
 
-#: ../libnautilus-private/nautilus-file-utilities.c:483
+#: ../libnautilus-private/nautilus-file-utilities.c:484
 msgid "Fonts"
 msgstr "Písma"
 
-#: ../libnautilus-private/nautilus-file-utilities.c:485
+#: ../libnautilus-private/nautilus-file-utilities.c:486
 msgid "Themes"
 msgstr "Témy"
 
-#: ../libnautilus-private/nautilus-file-utilities.c:487
+#: ../libnautilus-private/nautilus-file-utilities.c:488
 msgid "CD/DVD Creator"
 msgstr "Vytváranie CD/DVD"
 
-#: ../libnautilus-private/nautilus-file-utilities.c:489
+#: ../libnautilus-private/nautilus-file-utilities.c:490
 msgid "Windows Network"
 msgstr "Sieť Windows"
 
 #. translators: this is the title of the "dns-sd:///" location
-#: ../libnautilus-private/nautilus-file-utilities.c:492
+#: ../libnautilus-private/nautilus-file-utilities.c:493
 msgid "Services in"
 msgstr "Služby na"
 
@@ -2395,11 +2396,11 @@ msgstr "Obdĺžnik výberu"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4316
 msgid "Normal Alpha"
-msgstr ""
+msgstr "Normálna alfa"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4317
 msgid "Opacity of the normal icons if frame_text is set"
-msgstr ""
+msgstr "Nepriehľadnosť normálnych ikon, ak je nastavené frame_text"
 
 #: ../libnautilus-private/nautilus-icon-dnd.c:790
 msgid "Switch to Manual Layout?"
@@ -2419,8 +2420,8 @@ msgid ""
 "\"%s\" can't open \"%s\" because \"%s\" can't access files at \"%s\" "
 "locations."
 msgstr ""
-"\"%s\" nemohol otvoriť \"%s\", pretože \"%s\" nemohol pristúpiť k súborom umiestneným v \"%s"
-"\""
+"\"%s\" nemohol otvoriť \"%s\", pretože \"%s\" nemohol pristúpiť k súborom "
+"umiestneným v \"%s\""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:142
 msgid "Open Failed, would you like to choose another action?"
@@ -2432,8 +2433,8 @@ msgid ""
 "The default action can't open \"%s\" because it can't access files at \"%s\" "
 "locations."
 msgstr ""
-"Štandardná akcia nedokáže otvoriť \"%s\", pretože nemôže pristúpiť k súborom umiestneným "
-"v \"%s\""
+"Štandardná akcia nedokáže otvoriť \"%s\", pretože nemôže pristúpiť k súborom "
+"umiestneným v \"%s\""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:150
 #: ../libnautilus-private/nautilus-program-choosing.c:183
@@ -2446,8 +2447,8 @@ msgid ""
 "\"%s\" can't open \"%s\" because \"%s\" can't access files at \"%s\"."
 "locations."
 msgstr ""
-"\"%s\" nemohol otvoriť \"%s\", pretože \"%s\" nemohol pristúpiť k súborom umiestneným v \"%s"
-"\""
+"\"%s\" nemohol otvoriť \"%s\", pretože \"%s\" nemohol pristúpiť k súborom "
+"umiestneným v \"%s\""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:172
 msgid ""
@@ -2463,8 +2464,8 @@ msgid ""
 "The default action can't open \"%s\" because it can't access files at \"%s\"."
 "locations."
 msgstr ""
-"Štandardná akcia nedokáže otvoriť \"%s\", pretože nemôže pristúpiť k súborom umiestneným "
-"v \"%s\""
+"Štandardná akcia nedokáže otvoriť \"%s\", pretože nemôže pristúpiť k súborom "
+"umiestneným v \"%s\""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:178
 msgid ""
@@ -2585,8 +2586,8 @@ msgstr "Toto otvorenie cieľa podporuje len miestne súbory."
 msgid ""
 "To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
-"Aby ste otvorili súbory, ktoré nie sú miestne, skopírujte ich do miestneho priečinka "
-"a otvorte ich znova."
+"Aby ste otvorili súbory, ktoré nie sú miestne, skopírujte ich do miestneho "
+"priečinka a otvorte ich znova."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:923
 #: ../libnautilus-private/nautilus-program-choosing.c:935
@@ -2598,8 +2599,9 @@ msgid ""
 "To open non-local files copy them to a local folder and then drop them "
 "again. The local files you dropped have already been opened."
 msgstr ""
-"Aby ste otvorili súbory, ktoré nie sú miestne, skopírujte ich do miestneho priečinka "
-"a otvorte ich znova. Miestne súbory, ktoré ste otvorili, už boli otvorené."
+"Aby ste otvorili súbory, ktoré nie sú miestne, skopírujte ich do miestneho "
+"priečinka a otvorte ich znova. Miestne súbory, ktoré ste otvorili, už boli "
+"otvorené."
 
 #: ../libnautilus-private/nautilus-undo-signal-handlers.c:174
 msgid "Edit"
@@ -2998,6 +3000,14 @@ msgid ""
 "extension for \"%s\", then open the file normally. Alternatively, use the "
 "Open With menu to choose a specific application for the file. "
 msgstr ""
+"Názov súboru \"%s\" poukazuje na to, že tento súbor je typu \"%s\". Obsah "
+"súboru indikuje, že typ súboru je \"%s\". Ak otvoríte tento súbor, môže to "
+"znamenať bezpečnostné riziko pre váš systém.\n"
+"\n"
+"Neotvárajte tento súbor, iba ak ste ho sami vytvorili, alebo ste ho získali "
+"z dôveryhodného zdroja. Aby ste mohli súbor otvoriť, premenujte ho na \"%s\" "
+"tak, aby mal správnu príponu a potom ho normálne otvorte. Alebo môžete "
+"použiť menu \"Otvoriť s\" a vybrať konkrétnu aplikáciu pre súbor. "
 
 #: ../src/file-manager/fm-directory-view.c:4830
 #, c-format
@@ -3018,8 +3028,7 @@ msgstr ""
 msgid ""
 "Choosing a script from the menu will run that script with any selected items "
 "as input."
-msgstr ""
-"Vybraním skriptu z menu ho spustí s vybranými položkami ako vstupom."
+msgstr "Vybraním skriptu z menu ho spustí s vybranými položkami ako vstupom."
 
 #: ../src/file-manager/fm-directory-view.c:5289
 msgid "About Scripts"
@@ -3084,10 +3093,8 @@ msgid_plural ""
 "The %d selected items will be moved if you select the Paste command"
 msgstr[0] ""
 "%d vybraných položiek bude presunutých, ak si vyberiete príkaz Vložiť"
-msgstr[1] ""
-"%d vybraná položka bude presunutá, ak si vyberiete príkaz Vložiť"
-msgstr[2] ""
-"%d vybrané položky budú presunuté, ak si vyberiete príkaz Vložiť"
+msgstr[1] "%d vybraná položka bude presunutá, ak si vyberiete príkaz Vložiť"
+msgstr[2] "%d vybrané položky budú presunuté, ak si vyberiete príkaz Vložiť"
 
 #: ../src/file-manager/fm-directory-view.c:5469
 #, c-format
@@ -3096,10 +3103,8 @@ msgid_plural ""
 "The %d selected items will be copied if you select the Paste command"
 msgstr[0] ""
 "%d vybraných položiek bude skopírovaných, ak si vyberiete príkaz Vložiť"
-msgstr[1] ""
-"%d vybraná položka bude skopírovaná, ak si vyberiete príkaz Vložiť"
-msgstr[2] ""
-"%d vybrané položky budú skopírované, ak si vyberiete príkaz Vložiť"
+msgstr[1] "%d vybraná položka bude skopírovaná, ak si vyberiete príkaz Vložiť"
+msgstr[2] "%d vybrané položky budú skopírované, ak si vyberiete príkaz Vložiť"
 
 #: ../src/file-manager/fm-directory-view.c:5563
 #: ../src/file-manager/fm-tree-view.c:981
@@ -4995,8 +5000,7 @@ msgstr "Softvér"
 #: ../src/nautilus-image-properties-page.c:249
 #, c-format
 msgid "<b>Image Type:</b> %s (%s)\n"
-msgstr ""
-"<b>Typ obrázka:</b> %s (%s)\n"
+msgstr "<b>Typ obrázka:</b> %s (%s)\n"
 
 #: ../src/nautilus-image-properties-page.c:251
 #, c-format
@@ -5329,7 +5333,7 @@ msgstr "Prejsť na nasledujúce navštívené miesto"
 msgid "Forward history"
 msgstr "Dopredu v histórii"
 
-#: ../src/nautilus-navigation-window.c:746
+#: ../src/nautilus-navigation-window.c:779
 #, c-format
 msgid "%s - File Browser"
 msgstr "Prehliadač súborov %s"
@@ -5677,7 +5681,8 @@ msgid ""
 msgstr ""
 "Nautilus je voľný softvér. Môžete ho redistribuovať a/alebo modifikovať \n"
 "podľa pravidiel GNU Všeobecnej verejnej licencie ako je zverejnená \n"
-"Free Software Foundation, buď verzie 2, alebo (podľa vašej voľby) ľubovoľnej \n"
+"Free Software Foundation, buď verzie 2, alebo (podľa vašej voľby) "
+"ľubovoľnej \n"
 "novšej verzie."
 
 #: ../src/nautilus-window-menus.c:413
@@ -5699,7 +5704,8 @@ msgid ""
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
 "Mali by ste získať kópiu GNU Všeobecnej verejnej licencie \n"
-"spolu s programom Nautilus. Ak nie, napíšte do Free Software Foundation, Inc., \n"
+"spolu s programom Nautilus. Ak nie, napíšte do Free Software Foundation, "
+"Inc., \n"
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 
 #: ../src/nautilus-window-menus.c:446
