--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-14  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2005-07-13  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
