Remove underlines from all lines in single click mode. Add hover underline
2005-07-14  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	Remove underlines from all lines in single click mode.
	Add hover underline and cursor. (#105521)
	Patch from Christian Neumair  <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-07-14  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-view.c:
+	Remove underlines from all lines in single click mode.
+	Add hover underline and cursor. (#105521)
+	Patch from Christian Neumair  <chris@gnome-de.org>
+
 2005-07-13  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-desktop-link-monitor.c:
