--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-14  Elijah Newren  <newren@gmail.com>
+
+	* configure.in: Bump required startup-notification version up to
+	0.8 (should have been done back in February with the updated
+	startup-notification stuff, but better late than never)
+
 2005-07-14  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-list-view.c:
