--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-16  Yair Hershkovitz  <yairhr@gmail.com>
+
+	*he.po: Updated Hebrew translation.
+
 2005-07-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
